--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,11 @@
 
   <body>
     <%= render "shared/navbar" %>
-    <%= yield %>
+
+    <div class="container">
+      <%= yield %>
+    </div>
+
+
   </body>
 </html>
