--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,20 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
     <%= render "shared/navbar" %>
 
     <div class="container">
+      <% if notice.present? %>
+        <%= render "shared/flash", message: notice, css_class: "success" %>
+      <% end %>
+      
+      <% if alert.present? %>
+        <%= render "shared/flash", message: alert, css_class: "danger" %>
+      <% end %>
 
-    <%= yield %>
+      <% yield %>
+  
+    </div>
   </body>
 </html>
