--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
   <div class="container">
     <%= link_to "Photogram", root_path, class: "navbar-brand" %> 
 
@@ -31,7 +31,7 @@
               <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "nav-link" %>
             </li>
         <% else %>
-                  <li class="nav-item">
+              <li class="nav-item">
           <%= link_to "Sign in", new_user_session_path, class: "nav-link" %>
           </li>
 
