--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
 
   <body>
     <%= render "shared/navbar" %>
+    
+    <div class="container">
     <%= yield %>
+    </div>
   </body>
 </html>
