--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,14 +17,12 @@
         <div class="card-body">
           <h5 class="card-title"><%= photo.owner.username %></h5>
           <p class="card-text"><%= photo.caption%></p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
 
         <ul class="list-group list-group-flush">
           <% photo.comments.each do |comment|%>
             <li class="list-group-item">
             <div class="media">
-                <img src="..." class="mr-3" alt="...">
                 <div class="media-body">
                   <h5 class="mt-0"><%= comment.author.username %></h5>
                   <p><%= comment.body %> </p>
@@ -33,7 +31,11 @@
             <% end%>
           </li>
         </ul>
+        <div class="card-body">
+        <%= render "comments/form", comment: Comment.new(photo_id: photo.id) %>
       </div>
+      </div>
+      
     </div>
   </div>
 
