--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,13 +14,15 @@
   <%= link_to "Liked Photos", liked_photos_path(@user.username), class: "nav-link" %>
 </li>
 <li>
-  <%= link_to "Feed", liked_photos_path(@user.username), class: "nav-link" %>
+  <%= link_to "Feed", feed_photos_path(@user.username), class: "nav-link" %>
 </li>
+
 <li>
-  <%= link_to "Followers", liked_photos_path(@user.username), class: "nav-link" %>
+  <%= link_to "Followers", followers_photos_path(@user.username), class: "nav-link" %>
 </li>
+
 <li>
-  <%= link_to "Following", liked_photos_path(@user.username), class: "nav-link" %>
+  <%= link_to "Following", following_photos_path(@user.username), class: "nav-link" %>
 </li>
  
 </nav>
