--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -27,7 +27,7 @@
       </li>
 
       <li class="nav-item">
-        <%= link_to "Sign out", destroy_user_session_path, meethod: :delete, class: "nav-link" %>
+        <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "nav-link" %>
       </li>
 
       <% else %> 
