--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<div class="container">
 <%= link_to "Photogram", root_path, class: "navbar-brand" %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,9 +20,28 @@
         </div>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+
+    <ul class="navbar-nav">
+    <% if user_signed_in?%>
+
+      <li class="nav-item">
+        <%= link_to "Edit profile", edit_user_registration_path, class: "nav-link" %>
+      </li>
+
+      <li class="nav-item">
+        <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "nav-link" %>
+      </li>
+      <%else%>
+             <li class="nav-item">
+        <%= link_to "Sign in", new_user_session_path, class: "nav-link" %>
+      </li>
+
+      <li class="nav-item">
+        <%= link_to "Sign up", new_user_registration_path, class: "nav-link" %>
+      </li>
+
+      <% end %>
+    </ul>
+    </div>
   </div>
 </nav>
