--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,11 +8,11 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Resources
+        <li class="nav-item active">
+          <a class="nav-link drodown-toggle" href="#" role="button' data-toggle="dropdown" aria-expanded="false">
+            Resourcres
           </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <div class="dropdown-menu">
             <a class="dropdown-item" href="/photos">Photos</a>
             <a class="dropdown-item" href="/comments">Comments</a>
             <a class="dropdown-item" href="/follow_requests">Follow requests</a>
@@ -21,13 +21,13 @@
         </li>
       </ul>
 
-      <ul class="navbar-nav ml-auto">
+     <ul class="navbar-nav ml-auto">
         <% if user_signed_in? %>
           <li class="nav-item">
             <%= link_to "Edit profile", edit_user_registration_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "nav-link" %>
+            <%= button_to "Sign out", destroy_user_session_path, method: :delete, class: "nav-link" %>
           </li>
         <% else %>
           <li class="nav-item">
